--- a/Week4/Homework/Homework4.ipynb
+++ b/Week4/Homework/Homework4.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
     "if sum(d[\"grade\"])/len(d[\"grade\"])>7:\n",
     "    print(\"Good job\")\n",
     "else:\n",
-    "    print(\"You need to work more\")\n"
+    "    print(\"You need to work more\")"
    ]
   },
   {
@@ -134,15 +134,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input desert name: cookies\n",
-      "Your desert will arrive in 10 minutes\n"
+      "Input desert name: \n"
      ]
     }
    ],
